--- a/.travis.yml
+++ b/.travis.yml
@@ -35,12 +35,12 @@ jobs:
     # YAML Templates
     # -----------------
     # Integration tests
-    - &_integration_tests
+    - &integration-tests
       os: linux
       sudo: required
       language: minimal
       services: docker
-      env: &_integration_tests_env
+      env: &integration-tests-env
         - NODE_LTS=8
         - DOCKER_PROXY_TAG=$(if [ "${TRAVIS_BRANCH}" != "master" ]; then echo ":develop"; fi)
         - DOCKER_COMPOSE_TEST=test
@@ -49,11 +49,11 @@ jobs:
       script:
         - docker-compose -f .ci/$DOCKER_COMPOSE_TEST.yml run kuzzle
     # Documentation deployment
-    - &_doc_deployment
+    - &doc-deploy
       stage: Deployments
       language: node_js
       node_js: 10
-      env: &_doc_deployment_env
+      env: &doc-deploy-env
         - NODE_ENV=production
         - AWS_DEFAULT_REGION=us-west-2
         - AWS_ACCESS_KEY_ID=AKIAIYAXFUAHXOWP2MJA
@@ -127,73 +127,73 @@ jobs:
     # ---------------------------------------
     # Integration tests
     # ---------------------------------------
-    - stage: Integration tests
+    - <<: *integration-tests
+      stage: Integration tests
       if: branch =~ /^master|[0-9]+-(dev|stable)$/
       name: Node.js 6
       env:
-        - <<: *_integration_tests_env
+        - <<: *integration-tests-env
         - NODE_LTS=8
-      <<: *_integration_tests
 
 
-    - stage: Integration tests
+    - <<: *integration-tests
+      stage: Integration tests
       if: type =~ /^push|cron$/ AND branch =~ /^master|[0-9]+-(dev|stable)$/
       name: Node.js 8
       env:
-        - <<: *_integration_tests_env
-      <<: *_integration_tests
+        - <<: *integration-tests-env
 
 
-    - stage: Integration tests
+    - <<: *integration-tests
+      stage: Integration tests
       if: type =~ /^push|cron$/ AND branch =~ /^master|[0-9]+-(dev|stable)$/
       name: Node.js 10
       env:
-        - <<: *_integration_tests_env
+        - <<: *integration-tests-env
         - NODE_LTS=10
-      <<: *_integration_tests
 
     # ---------------------------------------
     # Cross-platform tests
     # ---------------------------------------
-    - name: Linux ARMHF
+    - <<: *integration-tests
+      name: Linux ARMHF
       stage: Cross-platform tests
       env:
-        - <<: *_integration_tests_env
+        - <<: *integration-tests-env
         - ARM=armhf
         - DOCKER_COMPOSE_TEST=test-$ARM
       before_script:
         - docker run --rm --privileged multiarch/qemu-user-static:register
         - docker run --rm -it -v "$(pwd)":/mnt kuzzleio/sdk-cross:node8-$ARM ./.ci/scripts/install-$ARM-deps.sh
-      <<: *_integration_tests
 
-    - name: Linux ARM64
+    - <<: *integration-tests
+      name: Linux ARM64
       stage: Cross-platform tests
       env:
-        - <<: *_integration_tests_env
+        - <<: *integration-tests-env
         - ARM=aarch64
         - DOCKER_COMPOSE_TEST=test-$ARM
       before_script:
         - docker run --rm --privileged multiarch/qemu-user-static:register
         - docker run --rm -it -v "$(pwd)":/mnt kuzzleio/sdk-cross:node8-$ARM ./.ci/scripts/install-$ARM-deps.sh
-      <<: *_integration_tests
 
     # ---------------------------------------
     # Redis Tests
     # ---------------------------------------
-    - name: Redis 3
+    - <<: *integration-tests
+      name: Redis 3
       stage: Redis tests
       env:
-        - <<: *_integration_tests_env
+        - <<: *integration-tests-env
         - REDIS_VERSION=3.2
-      <<: *_integration_tests
 
 
-    - name: Redis 4
+    - <<: *integration-tests
+      name: Redis 4
       stage: Redis tests
       env:
-        - <<: *_integration_tests_env
+        - <<: *integration-tests-env
         - REDIS_VERSION=4.0.14
-      <<: *_integration_tests
 
     # ---------------------------------------
     # Deployments
@@ -222,18 +222,18 @@ jobs:
       script:
         - MODE=production bash build-docker-images.sh
 
-    - name: Documentation to next-docs.kuzzle.io
+    - <<: *doc-deploy
+      name: Documentation to next-docs.kuzzle.io
       if: branch =~ /^[0-9]+-dev$/
       env:
-        - <<: *_doc_deployment_env
+        - <<: *doc-deploy-env
         - S3_BUCKET=docs-next.kuzzle.io
         - CLOUDFRONT_DISTRIBUTION_ID=E2ZCCEK9GRB49U
-      <<: *_doc_deployment
 
-    - name: Deploy docs.kuzzle.io
+    - <<: *doc-deploy
+      name: Deploy docs.kuzzle.io
       if: branch =~ /^master|[0-9]+-stable$/
       env:
-        - <<: *_doc_deployment_env
+        - <<: *doc-deploy-env
         - S3_BUCKET=docs.kuzzle.io
         - CLOUDFRONT_DISTRIBUTION_ID=E3D6RP0POLCJMM
-      <<: *_doc_deployment
